# -*- makefile -*-

# build the current directory first, then the test directory since we
# want to test the objects in this directory
if CPPUNIT
SUBDIRS = test
endif

# distribute the following files in any case:
EXTRA_DIST = bitcode.cpp	\
	bitcode.h		\
	builtins.h		\
	byteorder.h		\
	chunk-alloc.cpp		\
	chunk-alloc.h		\
	configs.cpp		\
	configs.h		\
	configs-inner.h		\
	dag-alloc.cpp		\
	dag-alloc.h		\
	dag-arced.cpp		\
	dag-arced.h		\
	dag-common.cpp		\
	dag-common.h		\
	dag-io.cpp		\
	dag-simple.cpp		\
	dag-simple.h		\
	dag.h			\
	dagprinter.cpp		\
	dagprinter.h		\
	dumper.cpp		\
	dumper.h		\
	errors.h		\
	getopt.h		\
	grammar-dump.cpp	\
	grammar-dump.h		\
	hash.cpp		\
	hash.h			\
	hashing.h		\
	lex-io.cpp		\
	lex-io.h		\
	lex-tdl.cpp		\
	lex-tdl.h		\
	list-int.h		\
	logging.cpp		\
	logging.h		\
	mfile.c			\
	mfile.h			\
	settings.cpp		\
	settings.h		\
	typecache.h		\
	types.cpp		\
	types.h			\
	utility.cpp		\
	utility.h		\
	vcg_print.h		\
	version.h		\
	Makefile.common
