AC_INIT([MRS], [alpha])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign])
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_CXX
AC_PROG_CPP
BOOST_REQUIRE
BOOST_FORMAT
BOOST_STRING_ALGO

CPPFLAGS="${BOOST_CPPFLAGS} ${CPPFLAGS}"

AM_CONDITIONAL(MRS_STANDALONE, [true])
AC_DEFINE(MRS_ONLY)
AM_CONDITIONAL(XML, [false])





AC_CONFIG_FILES([
  Makefile
  ])
AC_OUTPUT
